test(core): Phase 2 — Account/User service, mapper, handler unit tests; controller slices; repository ITs; UtilityPaymentIT
Intended-behaviour tests blocked by #7-#9, #15, #16 are @Disabled with issue refs.
ITs read transaction rows via JdbcTemplate (no TransactionRepository seam).

Co-Authored-By: Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>